--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,50 +49,74 @@
       --small-font-size: .875rem;
       --smaller-font-size: .813rem;
     }
-  }
+}
 
-  /* base */
-  *{
+/* base */
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
+}
 
-  html{
-    scroll-behavior: smooth;
-  }
+html{
+    scroll-behavior: smooth; 
+}
 
-  body{
+body{
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
     background-color: var(--body-color);
     color: var(--text-color);
-  }
+}
 
-  h1,h2,h3{
+h1,h2,h3{
     color: var(--title-color);
     font-weight: var(--font-semi-bold);
-  }
+}
 
-  h1,h2,h3,p{
+h1,h2,h3,p{
     line-height: 140%;
-  }
+}
 
-  ul{
+ul{
     list-style: none;
-  }
+}
 
-  a{
+a{
     text-decoration: none;
-  }
+}
 
-  img{
+img{
     max-width: 100%;
     height: auto;
-  }
+}
 
-  button{
+button{
     border: none;
     outline: none;
     cursor: pointer;
-  }
+}
+
+/*** reusable css classes ***/
+
+.container{
+    max-width: 1200px;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+}
+
+.grid{
+    display: grid;
+    gap: 1.5rem;
+}
+
+.section{
+    padding: 4.5rem 0 2rem;
+}
+
+.section_title{
+    position: relative;
+    font-size: var(--h1-font-size);
+    padding-left: 1.25rem;
+    margin-bottom: 2.25rem;
+}
