--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,3 +160,43 @@ button{
     font-size: 1.15rem;
     cursor: pointer;
 }
+
+@media screen and (max-width: 767px){
+    .nav_menu{
+        position: fixed;
+        background-color: var(--black-color);
+        top: 0;
+        right: -100%;
+        width: 100%;
+        height: 100%;
+        transition: .3s;
+    }
+}
+
+.nav_list{
+    display: flex; 
+    flex-direction: column;
+    text-align: center;
+    row-gap: 3rem;
+    padding-top: 9rem;
+}
+
+.nav_link{
+    text-transform: uppercase;
+    color: var(--first-color-alt);
+    font-size: var(--h2-font-size);
+    transition: .3s;
+}
+
+.nav_link:hover{
+    color: var(--text-color);
+}
+
+.nav_close{
+    font-size: 2rem;
+    color: var(--first-color-alt);
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    cursor: pointer;
+}
